@@ -137,6 +137,7 @@ interface
 - SCIPprintCons() does not print termination symbol ";\n" anymore; if wanted, use SCIPinfoMessage() to print ";\n" manually
 - new method SCIPhaveVarsCommonClique() in scip.{h,c}, to check for common clique information on two given variables
 - forbid problem modifications in SCIP_STAGE_{INIT,EXIT}PRESOLVE
+- new parameter numerics/lpfeastol for primal feasibility tolerance used in LP solver
 
 performance improvements:
 - improved scaling of linear constraints, linear constraints with integral variables will now be scale with
